# RemaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CodeStatistic.cmd  dependencies.lua  premake5.lua
RemaEngine/: CMakeLists.txt  ClassDiagram.cd  ClassDiagram1.cd
RemaEngine/source/: RemaEngine.h  remapch.cpp  remapch.h
RemaEngine/source/Engine/: Engine.cpp  Engine.h  EnginePlatformSetup.h  EntryPoint.h
RemaEngine/source/Event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
RemaEngine/source/RemaEngine/: RemaEngine.h
RemaEngine/source/RemaEngine/Engine/: Core.h  Engine.cpp  Engine.h  EngineDefinitions.h  EnginePlatformSetup.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  PlatformSetup.h  Timestep.cpp  Timestep.h
RemaEngine/source/RemaEngine/Event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
RemaEngine/source/RemaEngine/Graphics/: BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VirtualIndexBuffer.cpp  VirtualIndexBuffer.h  VirtualRenderContext.h  VirtualVertexBuffer.cpp  (+1 more)
RemaEngine/source/System/: Logger.cpp  Logger.h
SampleNovel/: CMakeLists.txt  imgui.ini
SampleNovel/assets/shaders/: FlatColorShader.glsl  TextureShader.glsl
SampleNovel/source/: Game.cpp
SampleNovel/source/SampleNovel/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Game.cpp  GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  Player.cpp  Player.h  Sample2D.cpp  Sample2D.h
(+40 files in other folders)
